<resources>
    <string name="app_name">BookSelling</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="success_story">Success Story</string>
    <string name="play_video">Play Video</string>
    <string name="view_video">View Video</string>
    <string name="books_data">books Data</string>
    <string name="my_orders">My Orders</string>
    <string name="order_details">OrderDetails</string>
    <string name="order_id">OrderID:-</string>
    <string name="order_date">Order Date</string>
    <string name="order_total">Order Total</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="add_items_to_it_now">Add item to it now</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="start_shopping">Start Shopping</string>
</resources>