<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyOrdersDetailsActivity">

    <include
        layout="@layout/common_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin15"
        android:drawableLeft="@drawable/ic_order_details"
        android:drawablePadding="@dimen/margin10"
        android:text="@string/order_details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textsize18"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_order_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginRight="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textColor="@color/grey500"
                android:textSize="@dimen/textsize16"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize16"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin3"
            android:layout_marginRight="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textColor="@color/grey500"
                android:textSize="@dimen/textsize16"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize16"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin3"
            android:layout_marginRight="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_total"
                android:textColor="@color/grey500"
                android:textSize="@dimen/textsize16"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_order_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize18"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_my_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin15"
        android:drawableLeft="@drawable/ic_view_order"
        android:drawablePadding="@dimen/margin10"
        android:text="@string/my_orders"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textsize18"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_view_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_my_orders_details"
        android:layout_margin="@dimen/margin10"/>

</LinearLayout>