<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddToCartActivity">

    <include
        android:id="@+id/toolbar_add_to_cart"
        layout="@layout/common_toolbar" />

    <RelativeLayout
        android:layout_below="@id/toolbar_add_to_cart"
        android:id="@+id/rl_mainL_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_click"
            />

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@id/ll_click"
            android:background="@color/grey600" />-->

        <LinearLayout
            android:id="@+id/ll_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin40"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:backgroundTint="@color/grey200"
                android:layout_marginRight="@dimen/margin10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="@dimen/textsize15"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize15"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@color/red500">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/checkout"
                    android:textColor="@color/white"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_cart"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin100"
            android:src="@drawable/ic_shopping_cart"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_cartempty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_cart"
            android:text="@string/your_cart_is_empty"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin10"
            android:textSize="@dimen/textsize15"/>

        <TextView
            android:id="@+id/tv_additem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cartempty"
            android:text="@string/add_items_to_it_now"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin5"
            android:textSize="@dimen/textsize12"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_shopping_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_additem"
            android:text="@string/start_shopping"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin10"
            android:paddingLeft="@dimen/margin15"
            android:paddingRight="@dimen/margin15"
            android:background="@color/colorPrimary"/>

    </RelativeLayout>
</RelativeLayout>